ref/Modules/Azure.RemoteApp/v0.9.8/Azure.RemoteApp.md
---
Module Name: Azure.RemoteApp
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 1.0.4.0
Locale: en-US
ms.assetid: 576EF7B8-0CDD-427D-8571-756340BC7AA4
updated_at: 11/11/2016 11:03 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.RemoteApp/v0.9.8/Azure.RemoteApp.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.RemoteApp/v0.9.8/Azure.RemoteApp.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf/azureps-cmdlets-docs/ServiceManagement/Azure.RemoteApp/v0.9.8/Azure.RemoteApp.md
uid: ServiceManagement/Azure.RemoteApp/v0.9.8/Azure.RemoteApp.md
ms.topic: conceptual
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# Azure.RemoteApp Module
## Description
This topic displays help topics for the Azure RemoteApp Cmdlets. 

## Azure.RemoteApp Cmdlets
### [Add-AzureRemoteAppUser](./Add-AzureRemoteAppUser.md)
Adds a user to a RemoteApp collection.


### [Disconnect-AzureRemoteAppSession](./Disconnect-AzureRemoteAppSession.md)
Disconnects a RemoteApp session.


### [Get-AzureRemoteAppCollectionUsageDetails](./Get-AzureRemoteAppCollectionUsageDetails.md)
Retrieves usage details for an Azure RemoteApp collection.


### [Get-AzureRemoteAppCollectionUsageSummary](./Get-AzureRemoteAppCollectionUsageSummary.md)
Retrieves a usage summary for a RemoteApp collection.


### [Get-AzureRemoteAppCollection](./Get-AzureRemoteAppCollection.md)
Retrieves information about an Azure RemoteApp collection.


### [Get-AzureRemoteAppLocation](./Get-AzureRemoteAppLocation.md)
Lists the locations that RemoteApp supports.


### [Get-AzureRemoteAppOperationResult](./Get-AzureRemoteAppOperationResult.md)
Retrieves the result of a RemoteApp operation.


### [Get-AzureRemoteAppPlan](./Get-AzureRemoteAppPlan.md)
Lists RemoteApp plans.


### [Get-AzureRemoteAppProgram](./Get-AzureRemoteAppProgram.md)
Retrieves the properties of one or more published RemoteApp programs for a collection.


### [Get-AzureRemoteAppSession](./Get-AzureRemoteAppSession.md)
Lists all active and disconnected RemoteApp sessions for a RemoteApp collection.


### [Get-AzureRemoteAppStartMenuProgram](./Get-AzureRemoteAppStartMenuProgram.md)
Lists the Start Menu programs in a RemoteApp collection.


### [Get-AzureRemoteAppTemplateImage](./Get-AzureRemoteAppTemplateImage.md)
Retrieves information about RemoteApp template images in Azure.


### [Get-AzureRemoteAppUser](./Get-AzureRemoteAppUser.md)
Lists the users in an Azure RemoteApp collection.


### [Get-AzureRemoteAppVNet](./Get-AzureRemoteAppVNet.md)
Retrieves information about RemoteApp virtual networks in Azure.


### [Get-AzureRemoteAppVpnDeviceConfigScript](./Get-AzureRemoteAppVpnDeviceConfigScript.md)
Retrieves the configuration script for a RemoteApp VPN device.


### [Get-AzureRemoteAppVpnDevice](./Get-AzureRemoteAppVpnDevice.md)
Retrieves information about a VPN device.


### [Get-AzureRemoteAppWorkspace](./Get-AzureRemoteAppWorkspace.md)
Retrieves information about a RemoteApp workspace.


### [Invoke-AzureRemoteAppSessionLogoff](./Invoke-AzureRemoteAppSessionLogoff.md)
Logs off a RemoteApp session immediately.


### [New-AzureRemoteAppCollection](./New-AzureRemoteAppCollection.md)
Creates a RemoteApp collection.


### [New-AzureRemoteAppTemplateImage](./New-AzureRemoteAppTemplateImage.md)
Uploads or imports a RemoteApp template image.


### [New-AzureRemoteAppVNet](./New-AzureRemoteAppVNet.md)
Creates a RemoteApp virtual network.


### [Publish-AzureRemoteAppProgram](./Publish-AzureRemoteAppProgram.md)
Publishes a RemoteApp program.


### [Remove-AzureRemoteAppCollection](./Remove-AzureRemoteAppCollection.md)
Removes a RemoteApp collection.


### [Remove-AzureRemoteAppTemplateImage](./Remove-AzureRemoteAppTemplateImage.md)
Deletes a RemoteApp template image.


### [Remove-AzureRemoteAppUser](./Remove-AzureRemoteAppUser.md)
Removes a user from a RemoteApp collection.


### [Remove-AzureRemoteAppVNet](./Remove-AzureRemoteAppVNet.md)
Deletes an Azure RemoteApp virtual network.


### [Rename-AzureRemoteAppTemplateImage](./Rename-AzureRemoteAppTemplateImage.md)
Renames a RemoteApp template image.


### [Reset-AzureRemoteAppVpnSharedKey](./Reset-AzureRemoteAppVpnSharedKey.md)
Resets the RemoteApp VPN shared key.


### [Send-AzureRemoteAppSessionMessage](./Send-AzureRemoteAppSessionMessage.md)
Sends a message to a user.


### [Set-AzureRemoteAppCollection](./Set-AzureRemoteAppCollection.md)
Sets the properties of a RemoteApp collection.


### [Set-AzureRemoteAppVNet](./Set-AzureRemoteAppVNet.md)
Sets the properties of a RemoteApp virtual network.


### [Set-AzureRemoteAppWorkspace](./Set-AzureRemoteAppWorkspace.md)
Sets the properties of an Azure RemoteApp workspace.


### [Unpublish-AzureRemoteAppProgram](./Unpublish-AzureRemoteAppProgram.md)
Unpublishes a RemoteApp program.


### [Update-AzureRemoteAppCollection](./Update-AzureRemoteAppCollection.md)
Updates a RemoteApp collection with a new template image.



